--- a/style.css
+++ b/style.css
@@ -228,10 +228,9 @@ a.anchor {
     color: white;
     height: auto;
     margin: 0;
-    padding:1% 1%;
     position: absolute;
     font-size: 25pt;
-    top: 45%;
+    top: 50%;
     left: 23%;
     -ms-transform: translate(-23%, -50%);
     transform: translate(-23%, -50%);
@@ -241,8 +240,9 @@ a.anchor {
 
 .intro h1 {
     color: white;
+    margin:0;
     font-family: Roboto-Bold;
-    font-size:1em;
+    font-size:24pt;
 }
 
 .intro p {
@@ -258,7 +258,7 @@ a.anchor {
     float: left;
     font-size: 0.5em;
     font-family: Roboto-Medium;
-    padding: 6px 6px;
+    padding: 8px 12px;
     border-radius: 0.2em;
     text-decoration: none;
     border-bottom: 0.2em solid #2995BE;
