--- a/style.css
+++ b/style.css
@@ -145,9 +145,8 @@ ul.nav li.right {
     margin: 0;
 }
 
-a.anchor {
+.anchor {
     position: relative;
-    top: -120px;
     visibility: hidden;
 }
 
@@ -400,6 +399,8 @@ svg  circle {
 
 .flex-row:nth-child(2) {
     padding-top: 3%;
+    padding-right:5%;
+    padding-left: 5%;
     flex:1;
 }
 
@@ -421,6 +422,7 @@ svg  circle {
 
 .courcont  * {
     margin: auto 1%;
+
 }
 
 .courcont p {
@@ -879,12 +881,15 @@ ul.nav li a {
     align-items: center;
     margin: 2% auto;
     align-content: center;
+    
 }
 
     
 .flex-row:nth-child(2) {
     flex: 1;
     margin: 2% auto;
+        padding-right:0%;
+    padding-left: 0%;
 }
 
 .courcont {
@@ -1121,6 +1126,8 @@ ul.nav li a {
 .flex-row:nth-child(2) {
     flex: 1;
      margin: 2%;
+        padding-right:0%;
+    padding-left: 0%;
 }
     
 .courcont {
@@ -1155,23 +1162,28 @@ ul.nav li a {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .headlines h2{
-        font-size: 2em;
-        margin-bottom: 1%;
-        
-    }
-    .pres h2 {
-        font-size:2em;
+.headlines h2{
+    font-size: 2em;
+    margin-bottom: 1%;
     }
     
-    .btncont {
-        margin-bottom: 3%;
+.pres h2 {
+    font-size:2em;
     }
-    
-    .butt {
-        width:70px;
-        height: 30px;
-        font-size: 10px;
+
+.flex-row:nth-child(2) {
+    padding-right:0%;
+    padding-left: 0%;
+    }
+
+.btncont {
+    margin-bottom: 3%;
+    }
+
+.butt {
+    width:70px;
+    height: 30px;
+    font-size: 10px;
     }  
 } 
 
