--- a/style.css
+++ b/style.css
@@ -344,25 +344,32 @@ svg  circle {
 
 .c {
     position: relative;
-     border-radius: 50%;
+    border-radius: 50%;
     border: solid 1px rgb(210,210,210);
-    height:50px;
-    width:50px;
+    min-height:50px;
+    min-width:50px;
+    max-height:50px;
+    max-width:50px;
     vertical-align: middle;
     text-align: center;
+    margin: auto;
 }
 
 .fa-line-chart, .fa-pie-chart {
-    top:30%;
-    right:28%;
+    line-height: 50px;
     color: #5CADD3;
-    position: absolute;
+    margin-right:auto;
+    margin-left:auto;
     vertical-align: middle; 
     display:inline-block;
 }
 
+.fa-pie-chart {
+    margin-left: 10%;
+}
+
 .fa-cubes {
-    top:25%;
+    top:30%;
     right:25%;
     color: #5CADD3;
     position: absolute;
@@ -420,7 +427,7 @@ svg  circle {
     line-height: 2em;
 }
 
-.courcont  * {
+.courcont {
     margin: auto 1%;
 
 }
@@ -619,7 +626,8 @@ p.p1 {
     position: absolute;
     opacity: 0.5;/*add this*/
     top: 0px; 
-    left: 0px; 
+    left: 0px;
+    pointer-events: none;
 }
 
 .contact {
@@ -910,7 +918,7 @@ ul.nav li a {
     text-align: justify;
 }
 
-.courcont  * {
+.courcont  {
     margin: 5% auto;
 }
     
@@ -1146,7 +1154,7 @@ ul.nav li a {
 
 }
 
-.courcont *{
+.courcont {
     margin: 2% auto;
 }
 
@@ -1172,6 +1180,8 @@ ul.nav li a {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+
+    
 
 .intro h1 {
     font-size:18pt;        
@@ -1272,12 +1282,8 @@ ul.nav li a {
     color:rgb(110,110,110);
 }
 
-.c  {
+.c {
     margin-right:5%;
-}
-
-
-.courcont *{
 }
 
 .courcont p{
